--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -118,9 +118,9 @@ else
         <div class="modal" style="display: @(detailsPago ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header bg-dark text-white">
                         <h5 class="modal-title"><b>Detalles de los Pagos</b></h5>
-                        <button type="button" class="close btn btn-outline-danger" data-dismiss="modal" aria-label="Close" @onclick="CloseDetailsPago">
+                        <button type="button" class="close btn btn-danger d-print-none" data-dismiss="modal" aria-label="Close" @onclick="CloseDetailsPago">
                             <span aria-hidden="true" class="oi oi-x"></span>
                         </button>
                     </div>
@@ -159,7 +159,7 @@ else
                             </table>
                         }
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer bg-dark text-white d-print-none">
                         
                     </div>
                 </div>
