--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -34,12 +34,12 @@
 <h1 class="titulo-proveedores">Listado de Proveedores</h1>
 
 
-<div class="modal" style="display: @(showCard ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
+<div class="modal" style="display: @(showCard ? "block" : "none"); background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header bg-dark text-white">
                 <h5 class="modal-title"><b>@TituloForm</b></h5>
-                <button type="button" class="close btn btn-outline-danger" data-dismiss="modal" aria-label="Close" @onclick="CloseCard">
+                <button type="button" class="close btn btn-danger" data-dismiss="modal" aria-label="Close" @onclick="CloseCard">
                     <span aria-hidden="true" class="oi oi-x"></span>
                 </button>
             </div>
@@ -99,11 +99,10 @@
                     </div>
                     
 
-                    <div class="modal-footer">
+                    <div class="modal-footer bg-dark text-white">
                         <div class="btn-group">
-                            <button type="submit" class="btn btn-outline-primary">
-                                <span class="oi oi-check"></span> Guardar
-                            </button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                            <button type="button" class="btn btn-secondary" @onclick="CloseCard">Cerrar</button>
                         </div>
                     </div>
                 </EditForm>
@@ -139,7 +138,7 @@
             </div>
 
             <div class="row-12 mt-2">
-                <table class="table table-hover table-striped">
+                <table class="table table-striped">
                     <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                         <tr>
                             <th>#</th>
