--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
         <AuthorizeView>
                 <Authorized>
                     <div class="top-row px-4 d-print-none" style="background-color: rgb(0, 0, 17);">
-                        <a class="nav-link active text-white" target="_blank">
+                        <a class="nav-link active text-white" href="user">
                             <strong>@context.User.FindFirstValue(ClaimTypes.GivenName)</strong>
                         </a>
                         <a href="about" class="d-print-none text-white">
