--- a/Pages/Facturacion/AddEditFactura.razor
+++ b/Pages/Facturacion/AddEditFactura.razor
@@ -88,7 +88,7 @@
     </div>
 
     @*Disenar los elementos que se cargan a la factura*@
-    <h5><b>Detalle de la factura N°:</b> @ultimoIdFactura</h5>
+    <h5 class="mt-1"><b>Detalle de la factura N°:</b> @ultimoIdFactura</h5>
     <table class="table table-hover">
         <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
             <tr>
