--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -44,118 +44,118 @@
             </div>
 
             <EditForm Model="productoRequest" OnValidSubmit="Send">
+                <div class="modal-body">
                     @if (Message != null)
                     {
-                        <div class="alert-danger">
-                            <span class="text-danger">@Message</span>
+                        <div class="alert-warning text-center">
+                            <label class="text-dark"><strong>@Message</strong></label>
                         </div>
                     }
-                    <div class="modal-body">
-                        <div class="form-group input-group mb-3">
+                    <div class="form-group input-group mb-3 mt-1">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-code"></span>
+                            </span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Codigo" id="nombreCompleto" 
+                        @bind-value="productoRequest.Codigo" required />
+                    </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-infinity"></span>
+                            </span>
+                        </div>
+                        <input type="number" class="form-control" placeholder="Descripción" id="correo" 
+                            @bind-value="productoRequest.Stock" required min="0.01" step="0.01"/>
+                    </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-document"></span>
+                            </span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Descripción" id="correo" 
+                            @bind-value="productoRequest.Nombre" required/>
+                    </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-code"></span>
+                                    <span class="oi oi-spreadsheet"></span>
                                 </span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Codigo" id="nombreCompleto" 
-                            @bind-value="productoRequest.Codigo" required />
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-infinity"></span>
-                                </span>
-                            </div>
-                            <input type="number" class="form-control" placeholder="Descripción" id="correo" 
-                                @bind-value="productoRequest.Stock" required min="0.01" step="0.01"/>
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-document"></span>
-                                </span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="Descripción" id="correo" 
-                                @bind-value="productoRequest.Nombre" required/>
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-white text-black border-0">
-                                        <span class="oi oi-spreadsheet"></span>
-                                    </span>
-                                </div>
-                                <select class="form-control" required @bind="productoRequest.CategoriaID">
-                                    @if (Categorias.Any())
-                                    {
-                                        <option disabled selected>Selecciona una categoría</option>
-                                        @foreach (var item in Categorias)
-                                        {
-                                            <option value="@item.Id">
-                                                @item.Nombre
-                                            </option>
-                                        }
-                                    }
-                                    else
-                                    {
-                                        <option disabled selected>No hay categorías disponibles</option>
-                                    }
-                                </select>
-                                <button class="btn btn-outline-success" @onclick="GoCategory">
-                                    <span class="oi oi-plus"></span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-person"></span>
-                                </span>
-                            </div>
-                            <select class="form-control" required @bind="productoRequest.ProveedorID">
-                                @if (Proveedores.Any())
+                            <select class="form-control" required @bind="productoRequest.CategoriaID">
+                                @if (Categorias.Any())
                                 {
-                                    <option disabled selected>Selecciona un proveedor</option>
-                                    @foreach (var item in Proveedores)
+                                    <option disabled selected>Selecciona una categoría</option>
+                                    @foreach (var item in Categorias)
                                     {
                                         <option value="@item.Id">
-                                            @item.NombreEmp
+                                            @item.Nombre
                                         </option>
                                     }
                                 }
                                 else
                                 {
-                                    <option disabled selected>No hay proveedores disponibles</option>
+                                    <option disabled selected>No hay categorías disponibles</option>
                                 }
                             </select>
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-dollar"></span>
-                                </span>
-                            </div>
-                            <input class="form-control" placeholder="Precio/Compra" id="costo" 
-                            @bind-value="productoRequest.PrecioCompra" required min="0.01" step="0.01"
-                            @oninput="ActualizarPrecioVenta" />
-                        </div>
-                        <div class="form-group input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white text-black border-0">
-                                    <span class="oi oi-dollar"></span>
-                                </span>
-                            </div>
-                            <input class="form-control" placeholder="Precio/Venta" id="precio" 
-                            @bind-value="productoRequest.Precio" required min="0.01" step="0.01"/>
+                            <button class="btn btn-outline-success" @onclick="GoCategory">
+                                <span class="oi oi-plus"></span>
+                            </button>
                         </div>
                     </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-person"></span>
+                            </span>
+                        </div>
+                        <select class="form-control" required @bind="productoRequest.ProveedorID">
+                            @if (Proveedores.Any())
+                            {
+                                <option disabled selected>Selecciona un proveedor</option>
+                                @foreach (var item in Proveedores)
+                                {
+                                    <option value="@item.Id">
+                                        @item.NombreEmp
+                                    </option>
+                                }
+                            }
+                            else
+                            {
+                                <option disabled selected>No hay proveedores disponibles</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-dollar"></span>
+                            </span>
+                        </div>
+                        <input class="form-control" placeholder="Precio/Compra" id="costo" 
+                        @bind-value="productoRequest.PrecioCompra" required min="0.01" step="0.01"
+                        @oninput="ActualizarPrecioVenta" />
+                    </div>
+                    <div class="form-group input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white text-black border-0">
+                                <span class="oi oi-dollar"></span>
+                            </span>
+                        </div>
+                        <input class="form-control" placeholder="Precio/Venta" id="precio" 
+                        @bind-value="productoRequest.Precio" required min="0.01" step="0.01"/>
+                    </div>
+                </div>
 
-                    <div class="modal-footer bg-dark text-white">
-                        <div class="btn-group">
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                            <button type="button" class="btn btn-secondary" @onclick="CloseCard">Cerrar</button>
-                        </div>
+                <div class="modal-footer bg-dark text-white">
+                    <div class="btn-group">
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                        <button type="button" class="btn btn-secondary" @onclick="CloseCard">Cerrar</button>
                     </div>
+                </div>
             </EditForm>
 
         </div>
@@ -244,7 +244,7 @@
     public List<ProveedorResponse> Proveedores { get; set; } = new();
     public ProductoRequest productoRequest { get; set; } = new();
     public bool showCard { get; set; } = false;
-    public string Message { get; set; } = "";
+    public string Message { get; set; } = null;
     public string Nombre { get; set; } = string.Empty;
     public string NombreEmp { get; set; } = string.Empty;
     void GoCategory()
@@ -260,6 +260,7 @@
     {
         productoRequest  = new ProductoRequest();
         showCard = false;
+        Message = null;
     }
 
     async Task CargarContactos()
@@ -307,6 +308,12 @@
     {
         if (productoRequest.Id == 0)
         {
+            var existingUser = Productos.FirstOrDefault(u => u.Codigo.Equals(productoRequest.Codigo, StringComparison.OrdinalIgnoreCase));
+            if (existingUser != null)
+            {
+                Message = "El código "+productoRequest.Codigo +" ya pertenece a un articulo 🤨";
+                return;
+            }
             var r = await productoServices.Crear(productoRequest);
             if (r.Success)
             {
