--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -249,7 +249,7 @@
     public string NombreEmp { get; set; } = string.Empty;
     void GoCategory()
     {
-        urlHelper.NavigateTo("category",true);
+        urlHelper.NavigateTo("category");
     }
     void ShowCard()
     {
