--- a/Pages/Category/Category.razor
+++ b/Pages/Category/Category.razor
@@ -2,11 +2,6 @@
 @attribute [Authorize]
 
 <style>
-    /* Estilo para resaltar las filas al pasar el cursor */
-    .table-hover tbody tr:hover {
-        background-color: #f5f5f5; /* Cambia el color al pasar el cursor */
-    }
-
     /* Estilo para el contenedor de la tabla */
     .table-container {
         margin-top: 20px;
@@ -36,7 +31,6 @@
     <div class="col-12">
         <h1 class="titulo-proveedores">Listado de categorías</h1>
     </div>
-
 </div>
 
 <div class="modal" style="display: @(showCard ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
@@ -64,9 +58,6 @@
                     </div>
                 </div>
             </EditForm>
-
-            
-
         </div>
     </div>
 </div>
@@ -103,7 +94,7 @@
             </div>
 
             <div class="row-12 mt-2">
-                <table class="table table-hover table-striped">
+                <table class="table table-striped">
                     <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                         <tr>
                             <th>#</th>
@@ -134,7 +125,6 @@
             </div>
         </div>
     </div>
-    
 </div>
 
 @code {
@@ -149,7 +139,7 @@
 
     void Producto()
     {
-        urlHelper.NavigateTo("producto", true);
+        urlHelper.NavigateTo("producto");
     }
     void ShowCard()
     {
